--- a/content/_index.html
+++ b/content/_index.html
@@ -7,7 +7,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 
 <!--Hero Section-->
 <section>
-  <div class="">
-    {{< imgh src="home-hero.jpg" alt="Foothills overhead doors">}}
+  <div class="hero">
+    {{< image src="home-hero.jpg" alt="Foothills overhead doors">}}
   </div>
 </section>
