--- a/content/_index.html
+++ b/content/_index.html
@@ -9,5 +9,52 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 <section>
   <div class="hero">
     {{< image src="home-hero.jpg" alt="Foothills overhead doors">}}
+    <div class="">
+      <h1>We Install Quality Overhead Doors</h1>
+      <p>YOUR satisfaction is our goal-every day!</p>
+      <a href="contact" class="btn-main">Get a Quote</a>
+    </div>
   </div>
+  <div class="">
+    <p>Since 2007, Foothills Overhead Doors LLC has been serving Northeast Arkansas. We are a full line overhead door sales and service company. Our products are known for their quality and value. From sectional overhead doors in residential and commercial styles, to high-speed doors, counter shutters, fire doors, security grills, and more, we have a door for your application and style. </p>
+    <a href="/residential-doors" class="btn-tan">Residential Doors</a>
+    <a href="/commercial-doors" class="btn-tan">Commercial Doors</a>
+  </div>
+</section>
+
+<!--steps section-->
+<section>
+  <h2>5 Steps to a New Door</h2>
+  <ol>
+    <li>Click the "Get a Quote" button and fill out the details.</li>
+    <li>We'll contact you to schedule a free estimate.</li>
+    <li>Any non-stock doors require a 65% down payment to place the order.</li>
+    <li>We'll schedule a date to install your new garage doors.</li>
+    <li>We'll install your garage door with as much care as if it was our own.</li>
+  </ol>
+  <p>Enjoy your new garage door for years.</p>
+</section>
+
+<!--How we work section-->
+<section>
+  <h2>How Foothills Works</h2>
+  <ol>
+    <li>We respect your time with timely communication and on-time arrivals.</li>
+    <li>We help you pick the garage door that fits your tastes and home. </li>
+    <li>Upfront pricing with no hidden fees.</li>
+    <li>We install your garage door like it was our own.</li>
+    <li>We train our technicians "in-house" to a high standard of excellence.</li>
+    <li>We require professionalism and friendliness from all our staff.</li>
+    <li>We clean up after ourselves, so you don't have to.</li>
+    <li>We'll gladly service your garage door when needed.</li>
+    <li>We invite your feedback.</li>
+  </ol>
+  <a href="/contact" class="btn-main">Get a Quote</a>
+</section>
+
+<!--suppliers section-->
+<section>
+  <h2>Our Favorite Suppliers</h2>
+  <p>Click the logos to visit their websites</p>
+
 </section>
