fix: added type=global to shortcode

--- a/content/_index.html
+++ b/content/_index.html
@@ -8,7 +8,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 <!--Hero Section-->
 <section>
   <div class="hero">
-    {{< image src="home-hero.jpg" alt="Foothills overhead doors">}}
+    {{< image src="home-hero.jpg" alt="Foothills overhead doors" type="global">}}
     <div class="">
       <h1>We Install Quality Overhead Doors</h1>
       <p>YOUR satisfaction is our goal-every day!</p>
