--- a/content/_index.html
+++ b/content/_index.html
@@ -9,13 +9,13 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 <section>
   <div class="hero">
     {{< image src="home-hero.jpg" alt="Foothills overhead doors" type="global">}}
-    <div class="">
+    <div class="heading">
       <h1>We Install Quality Overhead Doors</h1>
       <p>YOUR satisfaction is our goal-every day!</p>
       <a href="contact" class="btn-main">Get a Quote</a>
     </div>
   </div>
-  <div class="">
+  <div class="hero--text">
     <p>Since 2007, Foothills Overhead Doors LLC has been serving Northeast Arkansas. We are a full line overhead door sales and service company. Our products are known for their quality and value. From sectional overhead doors in residential and commercial styles, to high-speed doors, counter shutters, fire doors, security grills, and more, we have a door for your application and style. </p>
     <a href="/residential-doors" class="btn-tan">Residential Doors</a>
     <a href="/commercial-doors" class="btn-tan">Commercial Doors</a>
@@ -23,7 +23,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 </section>
 
 <!--steps section-->
-<section>
+<section class="steps">
   <h2>5 Steps to a New Door</h2>
   <ol>
     <li>Click the "Get a Quote" button and fill out the details.</li>
