--- a/content/_index.html
+++ b/content/_index.html
@@ -36,7 +36,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 </section>
 
 <!--How we work section-->
-<section>
+<section class="works">
   <h2>How Foothills Works</h2>
   <ol>
     <li>We respect your time with timely communication and on-time arrivals.</li>
@@ -53,8 +53,12 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 </section>
 
 <!--suppliers section-->
-<section>
+<section class="suppliers">
   <h2>Our Favorite Suppliers</h2>
   <p>Click the logos to visit their websites</p>
-
+  <div class="logos">
+    <a href="https://www.chiohd.com/" target="_blank">{{<image src="chi.png" alt="chi overhead doors" type="global">}}</a>
+    <a href="http://www.liftmaster.com/" target="_blank">{{<image src="liftmaster.png" alt="liftmaster openers" type="global" class="liftmaster">}}</a>
+    <a href="http://www.janusintl.com/" target="_blank">{{<image src="janus.png" alt="janus international" type="global">}}</a>
+  </div>
 </section>
