--- a/content/residential-doors.html
+++ b/content/residential-doors.html
@@ -8,18 +8,18 @@ description: Foothills is your premier supplier of overhead doors for your garag
 <!--Residential Hero section-->
 
 <section>
-  <h1>Residential Doors</h1>
+  <h1 class="tan-text">Residential Doors</h1>
   <div class="">
-    <img src="" alt="">
+    {{< image src="res-hero.jpg" class="secondary-hero" alt="residential overhead doors" type="global">}}
     <div class="">
-      <p>Looking for a garage door for your house? We have a wide range of options to help you find the door that best suits your home.</p>
+      <p class="brown-text">Looking for a garage door for your house? We have a wide range of options to help you find the door that best suits your home.</p>
 
     </div>
   </div>
 </section>
 
 <!--panel section-->
-<section>
+<section class="choice">
   <h2>Step 1: Choose Your Panel Style</h2>
   <div class="">
 
@@ -27,15 +27,30 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--Insulation Section-->
-<section>
+<section class="choice">
   <h2>Step 2: Choose Your Insulation</h2>
-  <div class="">
-
+  <div class="choices">
+     <div class="cheap">
+       {{< image src="no-ins.jpg" alt="no door insulation" widths="140" type="global">}}
+       <p class="brown-text">No Insulation</p>
+     </div>
+     <div class="economy">
+       {{< image src="standard-ins.jpg" alt="standard door insulation" widths="140" type="global">}}
+       <p class="brown-text">Standard Insulation: Vinyl Back Panels</p>
+     </div>
+     <div class="premium">
+       {{< image src="steel-back-ins.jpg" alt="Premium door insulation" widths="140" type="global">}}
+       <p class="brown-text">Heavy Duty Insulation: Steel Back Panels</p>
+     </div>
+     <div class="expensive">
+       {{< image src="prem-ins.jpg" alt="steel back door insulation" widths="140" type="global">}}
+       <p class="brown-text">Premium Insulation: Steel Sandwich</p>
+     </div>
   </div>
 </section>
 
 <!--color section-->
-<section>
+<section class="choice">
   <h2>Step 3: Choose Your Color</h2>
   <div class="">
     <h3>Standard Colors</h3>
@@ -58,7 +73,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--Windows section-->
-<section>
+<section class="choice">
   <h2>Step 4: Choose Your Windows</h2>
   <div class="">
     <h3>Type of Glass</h3>
@@ -91,5 +106,5 @@ description: Foothills is your premier supplier of overhead doors for your garag
 
 <!--Gallery Section-->
 <section>
-  
+
 </section>
