--- a/content/residential-doors.html
+++ b/content/residential-doors.html
@@ -54,8 +54,53 @@ description: Foothills is your premier supplier of overhead doors for your garag
   <h2>Step 3: Choose Your Color</h2>
   <div class="">
     <h3>Standard Colors</h3>
-    <div class="">
+    <div class="color-choices">
+      <div class="">
+        <div class="white">
+        </div>
+        <p class="brown-text">White</p>
+      </div>
+      <div class="">
+        <div class="almond">
 
+        </div>
+        <p class="brown-text">Almond</p>
+      </div>
+      <div class="">
+        <div class="sandstone">
+        </div>
+        <p class="brown-text">Sandstone</p>
+      </div>
+      <div class="">
+        <div class="brown">
+        </div>
+        <p class="brown-text">Brown</p>
+      </div>
+      <div class="">
+        <div class="bronze">
+        </div>
+        <p class="brown-text">Bronze</p>
+      </div>
+      <div class="">
+        <div class="gray">
+        </div>
+        <p class="brown-text">Gray</p>
+      </div>
+      <div class="">
+        <div class="desert-tan">
+        </div>
+        <p class="brown-text">Desert Tan</p>
+      </div>
+      <div class="">
+        <div class="charcoal">
+        </div>
+        <p class="brown-text">Charcoal</p>
+      </div>
+      <div class="">
+        <div class="black">
+        </div>
+        <p class="brown-text">Black</p>
+      </div>
     </div>
   </div>
   <div class="">
