--- a/content/residential-doors.html
+++ b/content/residential-doors.html
@@ -53,7 +53,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 <section class="choice">
   <h2>Step 3: Choose Your Color</h2>
   <div class="">
-    <h3>Standard Colors</h3>
+    <h3 class="heading-cheap">Standard Colors</h3>
     <div class="color-choices">
       <div class="">
         <div class="white">
@@ -62,7 +62,6 @@ description: Foothills is your premier supplier of overhead doors for your garag
       </div>
       <div class="">
         <div class="almond">
-
         </div>
         <p class="brown-text">Almond</p>
       </div>
@@ -104,15 +103,86 @@ description: Foothills is your premier supplier of overhead doors for your garag
     </div>
   </div>
   <div class="">
-    <h3>Upgrade Color Options</h3>
-    <div class="">
+    <h3 class="heading-econ">Upgrade Color Options</h3>
+    <div class="color-choices">
+      <div class="">
+        <div class="graphite">
+        </div>
+        <p class="brown-text">Graphite</p>
+      </div>
+      <div class="">
+        <div class="evergreen">
+        </div>
+        <p class="brown-text">Evergreen</p>
+      </div>
+      <div class="">
+        <div class="classic-woodgrain">
+        </div>
+        <p class="brown-text">Classic Woodgrain</p>
+      </div>
+      <div class="">
+        <div class="modern-woodgrain">
+        </div>
+        <p class="brown-text">Modern Woodgrain</p>
+      </div>
+      <div class="">
+        <div class="more">
+        </div>
+        <p class="brown-text">Call For More</p>
+      </div>
+      <div class="">
+        <div class="empty">
+        </div>
+      </div>
 
     </div>
   </div>
   <div class="">
-    <h3>Accents Woodtones</h3>
-    <div class="">
-
+    <h3 class="heading-prem">Accents Woodtones</h3>
+    <div class="color-choices">
+      <div class="">
+        <div class="walnut">
+        </div>
+        <p class="brown-text">Walnut</p>
+      </div>
+      <div class="">
+        <div class="driftwood">
+        </div>
+        <p class="brown-text">Driftwood</p>
+      </div>
+      <div class="">
+        <div class="mahogany">
+        </div>
+        <p class="brown-text">Mahogany</p>
+      </div>
+      <div class="">
+        <div class="cedar">
+        </div>
+        <p class="brown-text">Cedar</p>
+      </div>
+      <div class="">
+        <div class="dark-oak">
+        </div>
+        <p class="brown-text">Dark Oak</p>
+      </div>
+      <div class="">
+        <div class="natural-oak">
+        </div>
+        <p class="brown-text">Natural Oak</p>
+      </div>
+      <div class="">
+        <div class="carbon-oak">
+        </div>
+        <p class="brown-text">Carbon Oak</p>
+      </div>
+      <div class="">
+        <div class="empty">
+        </div>
+      </div>
+      <div class="">
+        <div class="empty">
+        </div>
+      </div>
     </div>
   </div>
 </section>
