--- a/content/residential-doors/_index.html
+++ b/content/residential-doors/_index.html
@@ -50,7 +50,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--color section-->
-<section class="choice">
+<section class="choice white">
   <h2>Step 3: Choose Your Color</h2>
   <div class="">
     <h3 class="heading-cheap">Standard Colors</h3>
@@ -188,12 +188,23 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--Windows section-->
-<section class="choice">
+<section class="choice white">
   <h2>Step 4: Choose Your Windows</h2>
   <div class="">
     <h3>Type of Glass</h3>
-    <div class="">
+    <div class="options-choices">
+       <div class="">
+         <div class="clear">
 
+         </div>
+         <p class="brown-text heading-cheap">Plain / Clear</p>
+       </div>
+       <div class="">
+         <div class="tinted">
+
+         </div>
+         <p class="brown-text heading-econ">Tinted</p>
+       </div>
     </div>
   </div>
   <div class="">
@@ -221,5 +232,5 @@ description: Foothills is your premier supplier of overhead doors for your garag
 
 <!--Gallery Section-->
 <section>
-
+   
 </section>
