--- a/content/commercial-doors/_index.html
+++ b/content/commercial-doors/_index.html
@@ -43,7 +43,108 @@ description: "Your source for the highest quality commercial overhead doors and 
      </div>
      <div class="expensive">
        {{< image src="prem-ins.jpg" alt="steel back door insulation" widths="140" type="global">}}
-       <p class="brown-text">Premium Insulation: Steel Sandwich</p>
+       <p class="brown-text">Extra Heavy Duty: Steel Sandwich Panels</p>
+     </div>
+     <div class="premium">
+       {{< image src="no-ins-full.jpg" alt="full view door no insulation" widths="140" type="global">}}
+       <p class="brown-text">Full View: No Insulation</p>
+     </div>
+     <div class="expensive">
+       {{< image src="ins-full.jpg" alt="full view door with insulation" widths="140" type="global">}}
+       <p class="brown-text">Full View: Stile and Rail Insulated</p>
      </div>
   </div>
+</section>
+
+
+<!--color section-->
+<section class="choice ">
+  <h2>Step 3: Choose Your Color*</h2>
+  <div class="">
+    <h3 class="">*Not all doors are available in all colors.</h3>
+    <div class="color-choices">
+      <div class="">
+        <div class="white">
+        </div>
+        <p class="brown-text">White</p>
+      </div>
+      <div class="">
+        <div class="almond">
+        </div>
+        <p class="brown-text">Almond</p>
+      </div>
+      <div class="">
+        <div class="sandstone">
+        </div>
+        <p class="brown-text">Sandstone</p>
+      </div>
+      <div class="">
+        <div class="brown">
+        </div>
+        <p class="brown-text">Brown</p>
+      </div>
+      <div class="">
+        <div class="bronze">
+        </div>
+        <p class="brown-text">Bronze</p>
+      </div>
+      <div class="">
+        <div class="gray">
+        </div>
+        <p class="brown-text">Gray</p>
+      </div>
+      <div class="">
+        <div class="evergreen">
+        </div>
+        <p class="brown-text">Evergreen</p>
+      </div>
+      <div class="">
+        <div class="charcoal">
+        </div>
+        <p class="brown-text">Charcoal</p>
+      </div>
+      <div class="">
+        <div class="black">
+        </div>
+        <p class="brown-text">Black</p>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+
+<!--Windows section-->
+<section class="choice white-background">
+  <h2>Step 4: Choose Your Windows</h2>
+  <div class="">
+    <h3>Type of Glass</h3>
+    <div class="options-choices">
+       <div class="">
+         <div class="clear">
+
+         </div>
+         <p class="brown-text heading-cheap">Plain / Clear</p>
+       </div>
+       <div class="">
+         <div class="tinted">
+
+         </div>
+         <p class="brown-text heading-econ">Tinted</p>
+       </div>
+    </div>
+  </div>
+  <div class="">
+    <h3>Window Sizes</h3>
+    <div class="">
+
+    </div>
+  </div>
+  <div class="">
+    <h3>Full View Glass Options</h3>
+    <div class="">
+
+    </div>
+  </div>
+
 </section>
