--- a/content/residential-doors/_index.html
+++ b/content/residential-doors/_index.html
@@ -50,7 +50,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--color section-->
-<section class="choice white">
+<section class="choice">
   <h2>Step 3: Choose Your Color</h2>
   <div class="">
     <h3 class="heading-cheap">Standard Colors</h3>
@@ -187,8 +187,9 @@ description: Foothills is your premier supplier of overhead doors for your garag
   </div>
 </section>
 
+
 <!--Windows section-->
-<section class="choice white">
+<section class="choice white-background">
   <h2>Step 4: Choose Your Windows</h2>
   <div class="">
     <h3>Type of Glass</h3>
@@ -232,5 +233,5 @@ description: Foothills is your premier supplier of overhead doors for your garag
 
 <!--Gallery Section-->
 <section>
-   
+
 </section>
