--- a/content/commercial-doors/_index.html
+++ b/content/commercial-doors/_index.html
@@ -121,16 +121,36 @@ description: "Your source for the highest quality commercial overhead doors and 
     <h3>Type of Glass</h3>
     <div class="options-choices">
        <div class="">
-         <div class="clear">
-
-         </div>
-         <p class="brown-text heading-cheap">Plain / Clear</p>
+         {{< image src="plain_glass.jpg" alt="full view plain glass" widths="169" type="global">}}
+         <p class="brown-text heading-cheap">1/8" Uninsulated DSB</p>
        </div>
        <div class="">
-         <div class="tinted">
-
-         </div>
-         <p class="brown-text heading-econ">Tinted</p>
+         {{< image src="Tinted_glass.jpg" alt="full view tinted glass" widths="169" type="global">}}
+         <p class="brown-text heading-econ">1/8" Tinted Uninsulated</p>
+       </div>
+       <div class="">
+         {{< image src="plain_glass_tempered.jpg" alt="full view tempered glass" widths="169" type="global">}}
+         <p class="brown-text heading-econ">1/8" Plain Tempered</p>
+       </div>
+       <div class="">
+         {{< image src="obscure_glass.jpg" alt="full view obscure glass" widths="169" type="global">}}
+         <p class="brown-text heading-prem">1/8" Obscure</p>
+       </div>
+       <div class="">
+         {{< image src="plain_glass_insulated.jpg" alt="full view insulated glass" widths="169" type="global">}}
+         <p class="brown-text heading-prem">1/2" Plain DSB Insulated</p>
+       </div>
+       <div class="">
+         {{< image src="frosted_glass_insulated.jpg" alt="full view frosted insulated glass" widths="169" type="global">}}
+         <p class="brown-text heading-prem">1/2" Frosted Insulated</p>
+       </div>
+       <div class="">
+         {{< image src="lowE_glass_insulated.jpg" alt="full view low E insulated glass" widths="169" type="global">}}
+         <p class="brown-text heading-prem">1/2" Low E Insulated</p>
+       </div>
+       <div class="">
+         {{< image src="tinted_glass_insulated.jpg" alt="full view tinted insulated glass" widths="169" type="global">}}
+         <p class="brown-text heading-exp">1/2" Tinted Insulated</p>
        </div>
     </div>
   </div>
