--- a/content/commercial-doors/_index.html
+++ b/content/commercial-doors/_index.html
@@ -121,6 +121,29 @@ description: "Your source for the highest quality commercial overhead doors and 
     <h3>Type of Glass</h3>
     <div class="options-choices">
        <div class="">
+         <div class="clear">
+
+         </div>
+         <p class="brown-text heading-cheap">Plain / Clear</p>
+       </div>
+       <div class="">
+         <div class="tinted">
+
+         </div>
+         <p class="brown-text heading-econ">Tinted</p>
+       </div>
+    </div>
+  </div>
+  <div class="">
+    <h3>Window Sizes</h3>
+    <div class="">
+
+    </div>
+  </div>
+  <div class="">
+    <h3>Full View Glass Options</h3>
+    <div class="options-choices glass">
+       <div class="">
          {{< image src="plain_glass.jpg" alt="full view plain glass" widths="169" type="global">}}
          <p class="brown-text heading-cheap">1/8" Uninsulated DSB</p>
        </div>
@@ -154,17 +177,10 @@ description: "Your source for the highest quality commercial overhead doors and 
        </div>
     </div>
   </div>
-  <div class="">
-    <h3>Window Sizes</h3>
-    <div class="">
 
-    </div>
-  </div>
-  <div class="">
-    <h3>Full View Glass Options</h3>
-    <div class="">
+</section>
 
-    </div>
-  </div>
 
+<section>
+  <h2>Commercial Full View Gallery</h2>
 </section>
