--- a/content/residential-doors/_index.html
+++ b/content/residential-doors/_index.html
@@ -234,4 +234,5 @@ description: Foothills is your premier supplier of overhead doors for your garag
 <!--Gallery Section-->
 <section>
 
+<a href="/custom-residential" class="btn-tan">Custom Residential</a>
 </section>
