--- a/content/custom-residential/index.html
+++ b/content/custom-residential/index.html
@@ -29,3 +29,10 @@ description: "Get a garage door that exactly suits your tastes with our specialt
   <p>Join with our other satisfied Northeast Arkansas overhead door customers in experiencing the difference this commitment makes for you and your door.</p>
   <p class="bold">After all, Your Satisfaction is our Goal</p>
 </section>
+
+<!--Gallery Section-->
+<section class="gallery-section">
+  <h2 class="small-h2">Custom Residential Gallery</h2>
+ {{<gallery>}}
+  <a href="/residential-openers" class="btn-tan">Residential Openers</a>
+</section>
