--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -232,7 +232,8 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--Gallery Section-->
-<section>
-
-<a href="/custom-residential" class="btn-tan">Custom Residential</a>
+<section class="gallery-section">
+  <h2 class="small-h2">Residential Gallery</h2>
+ {{<gallery>}}
+  <a href="/custom-residential" class="btn-tan">Custom Residential</a>
 </section>
