--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -181,6 +181,9 @@ description: "Your source for the highest quality commercial overhead doors and 
 </section>
 
 
-<section>
-  <h2>Commercial Full View Gallery</h2>
+<!--Gallery Section-->
+<section class="gallery-section">
+  <h2 class="small-h2">Commercial/Full View Gallery</h2>
+ {{<gallery>}}
+  <a href="/custom-residential" class="btn-tan">Custom Residential</a>
 </section>
