--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -20,9 +20,25 @@ description: "Your source for the highest quality commercial overhead doors and 
 <!--panel section-->
 <section class="choice">
   <h2>Step 1: Choose Your Panel Style</h2>
-  <div class="">
-
+  <div class="options-choices">
+    <div class="">
+      <img src="/images/Panel-Style-RibbedSteel.svg" alt="Ribbed Steel panel">
+      <p class="brown-text heading-cheap">Ribbed Steel</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-Micro-Grooved.svg" alt="micro-grooved panel">
+      <p class="brown-text heading-econ">Micro-grooved</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-Flush.svg" alt="flush panel">
+      <p class="brown-text heading-econ">Flush</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-FullView.svg" alt="full view panel">
+      <p class="brown-text heading-prem">Full View</p>
+    </div>
   </div>
+
 </section>
 
 <!--Insulation Section-->
@@ -136,8 +152,23 @@ description: "Your source for the highest quality commercial overhead doors and 
   </div>
   <div class="">
     <h3>Window Sizes</h3>
-    <div class="">
-
+    <div class="options-choices">
+      <div class="">
+        <img src="/images/Window-Size-24x6.svg" alt="24x6 windows">
+        <p class="brown-text">24"x 6"</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-Size-24x12.svg" alt="24x12 windows">
+        <p class="brown-text">24"x 12"</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-Size-34x16.svg" alt="34x16 windows">
+        <p class="brown-text">34"x 16"</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-Size-FullView.svg" alt="full vies windows">
+        <p class="brown-text">Full View</p>
+      </div>
     </div>
   </div>
   <div class="">
