--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -21,8 +21,39 @@ description: Foothills is your premier supplier of overhead doors for your garag
 <!--panel section-->
 <section class="choice">
   <h2>Step 1: Choose Your Panel Style</h2>
-  <div class="">
-
+  <div class="options-choices">
+    <div class="">
+      <img src="/images/Panel-Style-ShortRaised.svg" alt="short raised panel">
+      <p class="brown-text heading-cheap">Short Raised</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-LongRaised.svg" alt="long raised panel">
+      <p class="brown-text heading-cheap">Long Raised</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-ShortCH.svg" alt="short carriage house panel">
+      <p class="brown-text heading-econ">Short Carriage House</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-LongCH.svg" alt="long carriage House panel">
+      <p class="brown-text heading-econ">Long Carriage House</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-ShortRecessed.svg" alt="short recessed panel">
+      <p class="brown-text heading-econ">Short Recessed</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-LongRecessed.svg" alt="long recessed panel">
+      <p class="brown-text heading-econ">Long Recessed</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-Shaker.svg" alt="shaker panel">
+      <p class="brown-text heading-econ">Shaker</p>
+    </div>
+    <div class="">
+      <img src="/images/Panel-Style-PlankVGroove.svg" alt="plank v-groove panel">
+      <p class="brown-text heading-prem">Plank (V-Groove)</p>
+    </div>
   </div>
 </section>
 
@@ -209,19 +240,115 @@ description: Foothills is your premier supplier of overhead doors for your garag
     </div>
   </div>
   <div class="">
-    <h3>Raised Panel <span>Short Inserts</span></h3>
-    <div class="">
-
+    <h3>Raised Panel <span class="light-tan-text">Short Inserts</span></h3>
+    <div class="options-choices">
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Plain.svg" alt="plain window">
+        <p class="brown-text">Plain</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Cascade.svg" alt="cascade window">
+        <p class="brown-text">Cascade</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Stockton.svg" alt="stockton window">
+        <p class="brown-text">Stockton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Prairie.svg" alt="prairie window">
+        <p class="brown-text">Prairie</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Waterton.svg" alt="waterton window">
+        <p class="brown-text">Waterton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Sherwood.svg" alt="sherwood window">
+        <p class="brown-text">Sherwood</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Cathedral.svg" alt="cathedral window">
+        <p class="brown-text">Cathedral</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelShort-Sunburst.svg" alt="sunburst window">
+        <p class="brown-text">Sunburst</p>
+      </div>
     </div>
   </div>
   <div class="">
-    <h3>Raised Panel <span>Long Inserts</span></h3>
-    <div class="">
-
+    <h3>Raised Panel <span class="light-tan-text">Long Inserts</span></h3>
+    <div class="options-choices">
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Plain.svg" alt="plain window">
+        <p class="brown-text">Plain</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Cascade.svg" alt="cascade window">
+        <p class="brown-text">Cascade</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Stockton.svg" alt="stockton window">
+        <p class="brown-text">Stockton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-ArchedStockton.svg" alt="arched stockton window">
+        <p class="brown-text">Arched Stockton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Madison.svg" alt="madison window">
+        <p class="brown-text">Madison</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-ArchedMadison.svg" alt="arched madison window">
+        <p class="brown-text">Arched Madison</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Prairie.svg" alt="prairie window">
+        <p class="brown-text">Prairie</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Waterton.svg" alt="waterton window">
+        <p class="brown-text">Waterton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Sherwood.svg" alt="sherwood window">
+        <p class="brown-text">Sherwood</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-RaisedPanelLong-Sunburst.svg" alt="sunburst window">
+        <p class="brown-text">Sunburst</p>
+      </div>
     </div>
   </div>
   <div class="">
-    <h3>Carriage House/Shaker <span>Oversized Inserts</span></h3>
+    <h3>Carriage House/Shaker <span class="light-tan-text">Oversized Inserts</span></h3>
+    <div class="options-choices">
+      <div class="">
+        <img src="/images/Window-CHShakerOversided-Plain.svg" alt="plain window">
+        <p class="brown-text">Plain</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-CHShakerOversided-Cascade.svg" alt="cascade window">
+        <p class="brown-text">Cascade</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-CHShakerOversided-Stockton.svg" alt="stockton window">
+        <p class="brown-text">Stockton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-CHShakerOversided-ArchedStockton.svg" alt="arched stockton window">
+        <p class="brown-text">Arched Stockton</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-CHShakerOversided-Madison.svg" alt="madison window">
+        <p class="brown-text">Madison</p>
+      </div>
+      <div class="">
+        <img src="/images/Window-CHShakerOversided-ArchedMadison.svg" alt="arched madison window">
+        <p class="brown-text">Arched Madison</p>
+      </div>
+    </div>
   </div>
 </section>
 
