--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -216,5 +216,5 @@ description: "Your source for the highest quality commercial overhead doors and 
 <section class="gallery-section">
   <h2 class="small-h2">Commercial/Full View Gallery</h2>
  {{<gallery>}}
-  <a href="/custom-residential" class="btn-tan">Custom Residential</a>
+  <a href="/rolling-steel" class="btn-tan">Rolling Steel Doors</a>
 </section>
