--- a/content/rolling-steel/index.html
+++ b/content/rolling-steel/index.html
@@ -9,7 +9,7 @@ description: "Quality rolling steel overhead doors for commercial applications. 
   <h1 class="tan-text">Rolling Steel Doors</h1>
   <div class="">
     {{< image src="rol-hero.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
-    <div class="">
+    <div class="rs-points">
       <h2>Rolling Steel Doors</h2>
       <ul>
         <li>Heavy-duty Service Doors</li>
@@ -23,4 +23,119 @@ description: "Quality rolling steel overhead doors for commercial applications. 
       <p class="brown-text">We will install new rolling steel overhead doors or replace ones that have served their purpose.</p>
     </div>
   </div>
+  <a href="/contact" class="btn-tan">Get A Quote</a>
+</section>
+
+<section class="white-background mid-btn-border">
+  <div class="">
+    {{< image src="mini-storage.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
+    <div class="rs-points">
+      <h2>Rolling Steel Doors</h2>
+      <ul>
+        <li>Variety of sizes - large and small doors</li>
+        <li>Electric and Manual</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!--color section-->
+<section class="choice white-background ms-colors">
+  <h2>Mini Storage Door Colors</h2>
+  <div class="">
+    <h3 class="heading-cheap">Standard Colors</h3>
+    <div class="color-choices">
+      <div class="">
+        <div class="white">
+        </div>
+        <p class="brown-text">White</p>
+      </div>
+      <div class="">
+        <div class="almond">
+        </div>
+        <p class="brown-text">Almond</p>
+      </div>
+      <div class="">
+        <div class="sandstone">
+        </div>
+        <p class="brown-text">Sandstone</p>
+      </div>
+      <div class="">
+        <div class="brown">
+        </div>
+        <p class="brown-text">Brown</p>
+      </div>
+      <div class="">
+        <div class="bronze">
+        </div>
+        <p class="brown-text">Bronze</p>
+      </div>
+      <div class="">
+        <div class="gray">
+        </div>
+        <p class="brown-text">Gray</p>
+      </div>
+      <div class="">
+        <div class="desert-tan">
+        </div>
+        <p class="brown-text">Desert Tan</p>
+      </div>
+      <div class="">
+        <div class="charcoal">
+        </div>
+        <p class="brown-text">Charcoal</p>
+      </div>
+      <div class="">
+        <div class="black">
+        </div>
+        <p class="brown-text">Black</p>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <h3 class="heading-econ">Specialty Colors</h3>
+    <div class="color-choices">
+      <div class="">
+        <div class="graphite">
+        </div>
+        <p class="brown-text">Graphite</p>
+      </div>
+      <div class="">
+        <div class="evergreen">
+        </div>
+        <p class="brown-text">Evergreen</p>
+      </div>
+      <div class="">
+        <div class="classic-woodgrain">
+        </div>
+        <p class="brown-text">Classic Woodgrain</p>
+      </div>
+      <div class="">
+        <div class="modern-woodgrain">
+        </div>
+        <p class="brown-text">Modern Woodgrain</p>
+      </div>
+      <div class="">
+        <div class="more">
+        </div>
+        <p class="brown-text">Call For More</p>
+      </div>
+      <div class="">
+        <div class="empty">
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="">
+    <p>Join our commercial and industrial customers in Jonesboro and Northeast Arkansas who have found the reliability and quality Foothills Overhead Doors LLC offers. Contact us, and let us go to work for you. Our focus lets you focus on what you do best, productivity.</p>
+    <p class="bold">Experience the difference when "Your Satisfaction is our Goal."</p>
+  </div>
+</section>
+
+<!--Gallery Section-->
+<section class="gallery-section">
+  <h2 class="small-h2">Rolling Steel / Mini Storage Gallery</h2>
+ {{<gallery>}}
+  <a href="/commercial-operators" class="btn-tan">Commercial Operators</a>
 </section>
