--- a/content/_index.html
+++ b/content/_index.html
@@ -6,7 +6,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 ---
 
 <!--Hero Section-->
-<section>
+<section class="home-hero">
   <div class="hero">
     {{< image src="home-hero.jpg" alt="Foothills overhead doors" type="global">}}
     <div class="heading">
