--- a/content/commercial-operators/index.html
+++ b/content/commercial-operators/index.html
@@ -17,7 +17,7 @@ description: "Foothills Overhead Doors is your best source for quality Liftmaste
 </section>
 
 
-<section class="choice">
+<section class="choice operators">
   <h2 class="tan-h2">Jackshaft Operators</h2>
   <p class="brown-text">Wall Mount commercial door operators for sectional doors.</p>
   <div class="choices">
@@ -40,4 +40,50 @@ description: "Foothills Overhead Doors is your best source for quality Liftmaste
 
      </div>
   </div>
+</section>
+<section class="choice operators">
+  <h2 class="tan-h2">Trolley Operators</h2>
+  <p class="brown-text">Trolley operators for commercial doors suspend from the ceiling.</p>
+  <div class="choices">
+     <div class="cheap">
+       {{< image src="LD-Trolley.jpg" alt="Light Duty trolley" widths="140" type="global">}}
+       <p class="brown-text">Light Duty Trolley</p>
+       <p class="tan-text center">8587w</p>
+     </div>
+     <div class="economy">
+       {{< image src="MD-Trolley.jpg" alt="Medium Duty trolley" widths="140" type="global">}}
+       <p class="brown-text">Medium Duty Trolley</p>
+       <p class="tan-text center">MT5011</p>
+     </div>
+     <div class="premium">
+       {{< image src="HDTrolley.jpg" alt="heavy duty trolley" widths="140" type="global">}}
+       <p class="brown-text">Heavy-Duty Trolley</p>
+       <p class="tan-text center">T50 <span class="brown-text">or </span>T75</p>
+     </div>
+     <div class="">
+
+     </div>
+  </div>
+</section>
+<section class="choice operators">
+  <h2 class="tan-h2">Hoist Operator</h2>
+  <p class="brown-text">Optimal for industrial applications with larger sectional overhead doors.</p>
+  <div class="choices">
+     <div class="expensive">
+       {{< image src="Hoist.jpg" alt="hoist operator" widths="140" type="global">}}
+       <p class="brown-text">Hoist Operator</p>
+       <p class="tan-text center">H1011</p>
+     </div>
+     <div class="">
+
+     </div>
+  </div>
+</section>
+
+<section class="white-background text-section">
+  <p class="brown-text">LiftMaster is the leading manufacturer of overhead door operators. With a proven design and millions of units in service, you can expect and receive years of reliable performance.</p>
+  <p class="brown-text">We are proud to be a Northeast Arkansas overhead door sales and service dealer for this great product line. With the MyQ system of openers, remotes, and smartphone apps, your options are more unlimited than ever before.</p>
+  <p class="brown-text">Give us a call today! Whether your overhead door in Jonesbore needs repair, or you need a new opener, we are here for you.</p>
+  <p class="big-text bold brown-text">Your Satisfaction is our Goal.</p>
+  <a href="tel:8702759899" class="btn-main">870-275-9899</a>
 </section>
