--- a/content/custom-residential/index.html
+++ b/content/custom-residential/index.html
@@ -34,5 +34,5 @@ description: "Get a garage door that exactly suits your tastes with our specialt
 <section class="gallery-section">
   <h2 class="small-h2">Custom Residential Gallery</h2>
  {{<gallery>}}
-  <a href="/residential-openers" class="btn-tan">Residential Openers</a>
+  <a href="/residential-operators" class="btn-tan">Residential Openers</a>
 </section>
